# rust-project-template

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  codecov.yml
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: check.yml  test.yml
